--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="#timeline">Timeline</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#divisi">Divisi Baru</a>
+              <a class="nav-link" href="#bidang">Bidang Baru</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#guidebook">Guidebook</a>
@@ -289,45 +289,65 @@
       </div>
     </section>
 
-    <!-- Divisi Baru Section -->
-    <section id="divisi" class="py-5">
+    <!-- Bidang Baru Section -->
+    <section id="bidang" class="py-5">
       <div class="container">
         <div class="text-center mb-5">
           <h2 class="fw-bold">
-            <i class="bi bi-diagram-3 me-2"></i>Struktur Divisi Baru
+            <i class="bi bi-diagram-3 me-2"></i>Struktur Bidang Baru
           </h2>
           <p class="text-muted">
-            Divisi telah direstrukturisasi agar lebih fokus dan efektif.
+            Bidang telah direstrukturisasi agar lebih fokus dan efektif.
           </p>
         </div>
         <div class="row g-3">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="p-4 border rounded bg-light">
               <h5 class="fw-bold">
                 <i class="bi bi-moon-stars-fill text-info"></i> Keagamaan
               </h5>
               <p>
-                Mengelola kegiatan spiritual seperti Asmaul Husna & Jumat Infak.
+                <strong>DKKA:</strong> Keimanan dan Ketaqwaan Terhadap Tuhan
+                Yang Maha Esa<br />
+                <strong>BPLA:</strong> Budi Pekerti Luhur dan Akhlak Mulia
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="p-4 border rounded bg-light">
               <h5 class="fw-bold">
                 <i class="bi bi-shield-check text-danger"></i> Kedisiplinan
               </h5>
               <p>
-                Menegakkan tata tertib, program 5S, dan laporan kedisiplinan
-                harian.
+                <strong>WKB:</strong> Wawasan Kebangsaan, Kepribadian Unggul,
+                dan Bela Negara<br />
+                <strong>DPLA:</strong> Demokrasi, Pendidikan Politik, Lingkungan
+                Hidup, dan Bela Negara
               </p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class="p-4 border rounded bg-light">
               <h5 class="fw-bold">
-                <i class="bi bi-dribbble text-success"></i> Bakat & Minat
+                <i class="bi bi-dribbble text-success"></i> Bakat Minat
               </h5>
-              <p>Wadah penyaluran bakat dan informasi kompetisi atau lomba.</p>
+              <p>
+                <strong>OLGA:</strong> Prestasi Akademik, Seni, dan Olahraga<br />
+                <strong>GZ:</strong> Pembinaan Kualitas Jasmani, Kesehatan, dan
+                Gizi
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="p-4 border rounded bg-light">
+              <h5 class="fw-bold">
+                <i class="bi bi-globe text-primary"></i> Media Jaringan
+              </h5>
+              <p>
+                <strong>TIK:</strong> Teknologi Informasi dan Komunikasi<br />
+                <strong>3K:</strong> Kreativitas, Keterampilan, dan
+                Kewirausahaan
+              </p>
             </div>
           </div>
           <div class="col-md-6">
@@ -336,16 +356,9 @@
                 <i class="bi bi-journal-richtext text-warning"></i> Jurnalistik
               </h5>
               <p>
-                Mengelola mading sekolah dan mempublikasikan karya-karya siswa.
+                <strong>SASBUD:</strong> Sastra dan Budaya<br />
+                <strong>K.D.INGG:</strong> Komunikasi dalam Bahasa Inggris
               </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="p-4 border rounded bg-light">
-              <h5 class="fw-bold">
-                <i class="bi bi-globe text-primary"></i> Media & Jaringan
-              </h5>
-              <p>Bertugas mengelola media sosial & website resmi OSIS.</p>
             </div>
           </div>
         </div>
